--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-26  Nick Roberts  <nickrob@gnu.org>
+
+	* progmodes/gdb-ui.el (gdb-toggle-breakpoint) 
+	(gdb-goto-breakpoint): Fix breakage.
+
 2004-06-26  Eli Zaretskii  <eliz@gnu.org>
 
 	* man.el (Man-getpage-in-background): Add windows-nt to the list
