--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -2,6 +2,8 @@
 
 	* gtkutil.c (xg_get_image_for_pixmap): Call g_object_unref on
 	gpix and gmask just before return to avoid memory leak.
+	(xg_get_image_for_pixmap): Add workaround for monochrome displays
+	so insensitive and activated icons look ok.
 
 2004-06-27  Jason Rumney  <jasonr@gnu.org>
 
