--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-29  Kim F. Storm  <storm@cua.dk>
+
+	* nntp.el (nntp-authinfo-file): Add :group 'nntp.
+
+	* nnimap.el (nnimap-authinfo-file, nnimap-prune-cache):
+	Add :group 'nnimap.
+
 2004-05-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* mm-view.el (mm-insert-inline): Make it work in read-only buffer.
